{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "852f0100-f2a7-476c-b246-a81635dedb63",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "686e6e83-ef85-4a3b-9d69-3b7b5927ac26",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "35d4be86-1f6e-4ca8-9049-6a15d31b879d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ff7e47b-7689-40fe-abc3-1fbe7b62910e",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ce59b1c4-f307-4966-938a-447be6753b53",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a9b7b1a9-1802-4411-9067-90328859a40e",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3c4e4403-8eae-423d-b698-6b2550eff3df",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Equipment",
            "id": "00748c7a-36d2-485a-bba8-4b10602df484",
            "actions": [
                {
                    "name": "ChangeItem",
                    "type": "Button",
                    "id": "0d995e3b-732f-47c3-8b14-8d61ec2fe09e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "c662cdb5-47cf-4409-9f18-54282f7a3f1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponHotbar",
                    "type": "Value",
                    "id": "076ed6ef-6f4f-4748-ab4c-5a8a2fd4689b",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUpItem",
                    "type": "Button",
                    "id": "e6e6c365-c41f-4b74-a987-f6cd76dcf6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "8c882cf4-473b-460a-88f6-9e6025feb03a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ItemLeftClick",
                    "type": "Value",
                    "id": "2c356376-efd5-476e-a09c-1dff46216dc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ItemRightClick",
                    "type": "Value",
                    "id": "352d037b-aa55-490a-9d9f-b3ae20542a2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReloadItem",
                    "type": "Button",
                    "id": "bf92c1ca-e24c-4d4e-a014-284ec661876f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a2a5a383-7e00-48b4-ba5c-53410f798ec8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1d03aec-f186-4617-8c77-eb2260620674",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33fb805c-6074-46e5-95ec-cc0b5fbcdd9e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "WeaponHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22e6ddff-2f91-4497-a5d5-8b24274d566e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "WeaponHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92ba2083-3e5c-4c90-8297-07663d5ab921",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "WeaponHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1111c60f-e0b9-475d-b6f2-bf7e348e38f7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "WeaponHotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3df24c6-c236-4dcc-97ba-13ee7e790d51",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dddca8b-d15b-4ea2-9170-bc6238404e72",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "034215d7-8323-4fb9-9dd1-16086560b248",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ItemLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "591cf045-880b-41c6-bcfe-81976c3485b7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ItemRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c69847c4-5cff-4ae1-b091-8eafbcd3aa08",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}